--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,6 +2,8 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
     <meta charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}">
+    <meta name="_csrf_header" th:content="${_csrf.headerName}">
     <title>DexterReservation</title>
 
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -19,8 +21,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <form th:action="@{/search/study}" class="form-inline" method="get">
-                    <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="스터디 찾기"
+                <form th:action="@{/search/facility}" class="form-inline" method="get">
+                    <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="시설 찾기"
                            aria-label="Search"/>
                 </form>
             </li>
@@ -33,9 +35,6 @@
             <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link" th:href="@{/signup}">가입</a>
             </li>
-            <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link" th:href="@{/notifications}">알림</a>
-            </li>
             <li class="nav-item" sec:authorize="isAuthenticated()" th:if="${account != null}">
                 <a class="nav-link" th:href="@{'/profile/' + ${account.id}}">프로필</a>
             </li>
@@ -45,12 +44,18 @@
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
-                    <button class="btn btn-primary" type="submit">로그아웃</button>
+                    <button id="user-logout" class="btn btn-primary" type="submit">로그아웃</button>
                 </form>
             </li>
         </ul>
     </div>
 </nav>
+
+<div th:fragment="settings-menu (currentMenu)" class="list-group">
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'profile'}? active" href="#" th:href="@{/settings/profile}">프로필</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'password'}? active" href="#" th:href="@{/settings/password}">패스워드</a>
+    <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'account'}? active" href="#" th:href="@{/settings/account}">계정</a>
+</div>
 
 <div th:fragment="footer">
     <!-- JavaScript Bundle with Popper -->
