--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <body class="bg-light">
 <div th:replace="fragments :: main-nav"></div>
 <div class="alert alert-warning" role="alert" th:if="${account != null && !account.emailVerified}">
-    스터디올레 가입을 완료하려면 <a href="#" th:href="@{/checkemail(email=${account.email})}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
+    덱스터예약에 가입을 완료하려면 <a href="#" th:href="@{/checkemail(email=${account.email})}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
 </div>
 
 <div class="container">
