--- a/src/main/resources/templates/mail/link.html
+++ b/src/main/resources/templates/mail/link.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>DexterReservation</title>
+    <title>덱스터예약</title>
 </head>
 <body>
     <div>
         <p>안녕하세요. <span th:text="${name}"></span>님</p>
 
-        <h2 th:text="${message}">메시지</h2>
+        <h2 th:text="${message}"></h2>
 
         <div>
-            <a th:href="${host+'?token='+token+'&email='+ email}" th:text="${linkName}">Link</a>
+            <a th:href="${host + link}" th:text="${linkName}">Link</a>
             <p>링크가 동작하지 않는 경우에는 아래 URL을 웹브라우저에 복사해서 붙여 넣으세요.</p>
-            <small th:utext="${host+'?token='+token+'&email='+ email}"></small>
+            <small th:utext="${host + link}"></small>
         </div>
     </div>
     <footer>
