예약 성공, 예약 취소

--- a/src/main/resources/templates/facility/index.html
+++ b/src/main/resources/templates/facility/index.html
@@ -13,6 +13,7 @@
                 <div class="card mb-4 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title context" th:text="${facility.building}"></h5>
+                        <span class="facility-id" th:text="${facility.id}" hidden></span>
                         <p class="card-text context">
                             <span>오픈시간: </span>
                             <span th:text="${facility.openTime}"></span>
@@ -26,19 +27,21 @@
                             <span th:text="${facility.nowReserveCnt}"></span>
                         </p>
                         <p class="card-text context">
-                            <span>예약최대수: </span>
-                            <span th:text="${facility.maxReserveCnt}"></span>
-                        </p>
-                        <p class="card-text context">
                             <span>예약가능여부: </span>
                             <span th:if="${facility.possibleReservation}">예약가능</span>
                             <span th:unless="${facility.possibleReservation}">예약불가능</span>
                         </p>
+                        <p class="card-text context">
+                            <label class="label">예약날짜: </label>
+                            <input type="date" class="form-control selectDate">
+                        </p>
                         <a th:href="@{'/facility/' + ${facility.id}}" class="text-decoration-none btn btn-outline-primary">
                             시설 상세
                         </a>
-                        <button class="btn btn-primary btn-block" type="button"
+                        <button class="btn btn-primary btn-block user-reservation" type="button"
                                 th:if="${account != null && account.userType == T(com.youwent.modules.account.UserType).USER}">시설 예약</button>
+                        <button class="btn btn-primary btn-block user-reservation-cancel" type="button"
+                                th:if="${account != null && account.userType == T(com.youwent.modules.account.UserType).USER}">시설 예약취소</button>
                     </div>
                 </div>
             </div>
@@ -49,3 +52,36 @@
     <div th:replace="fragments :: footer"></div>
 </body>
 </html>
+
+<script type="application/javascript">
+
+    $(function () {
+        $('.selectDate').val(moment().format('YYYY-MM-DD'));
+
+        $('.user-reservation').on('click', function () {
+            var pos = $(this);
+            var date = pos.prev().prev().children().eq(1).val();
+            var id = pos.parent().children().eq(1).text();
+
+            $.ajax({
+                url: '/facility/' + id + '/settings/reservation' + "?reservationDate=" + date,
+                type: "GET",
+                dataType: "json",
+            }).done(function (data, status) {
+                var nowReserveCnt = pos.prev().prev().prev().prev().children().eq(1);
+                nowReserveCnt.text(data.dto.nowReserveCnt);
+                var possibleReservation = pos.prev().prev().prev().children().eq(1);
+                if (data.dto.possibleReservation) {
+                    possibleReservation.text('예약가능');
+                } else {
+                    possibleReservation.text('예약불가능');
+                }
+                pos.prev().prev().prev().children().eq(2).remove();
+                alert(data.statusCode + " "+ data.resultMsg);
+            }).fail(function (data, status){
+                alert(data.responseJSON.message);
+            });
+        });
+
+    });
+</script>
