--- a/src/main/resources/templates/facility/form.html
+++ b/src/main/resources/templates/facility/form.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
 <body class="bg-light">
-    <div th:replace="fragments :: facility-nav"></div>
+    <div th:replace="fragments :: main-nav"></div>
 
     <div class="container">
         <div class="py-5 text-center">
