--- a/src/main/resources/templates/facility/settings/facility.html
+++ b/src/main/resources/templates/facility/settings/facility.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
 <body class="bg-light">
-    <div th:replace="fragments :: facility-nav"></div>
+    <div th:replace="fragments :: main-nav"></div>
     <div class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col-2">
