--- a/src/main/resources/templates/reservation/index.html
+++ b/src/main/resources/templates/reservation/index.html
@@ -4,6 +4,26 @@
 <body class="bg-light">
     <div th:replace="fragments :: main-nav"></div>
     <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <form th:action="@{/reservation/search}" class="form-inline" method="get">
+                            <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="시설 찾기"
+                                   aria-label="Search"/>
+                            <input id="asc-building" name="orderByBuilding" type="radio" value="asc">
+                            <label for="asc-building">빌딩순</label>
+                            <input id="desc-building" name="orderByBuilding" type="radio" value="desc">
+                            <label for="desc-building">빌딩역순</label>
+
+                            <div class="col-sm-6">
+                                <button class="btn btn-primary btn-block" type="submit">검색</button>
+                            </div>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="py-5 text-center">
             <h2>내 예약</h2>
         </div>
